# qio

./: BUGS.txt  CMakeLists.txt  COMPILING.txt  FEATURES.txt  NOTTODO.txt  README.md  TODO.txt
cmake/: FindDirectX.cmake  FindGLEW.cmake  FindGLUT.cmake
code/api/: afDeclAPI.h  boxTrianglesCallback.h  cgameAPI.h  clientAPI.h  cmAPI.h  colMeshBuilderAPI.h  coreAPI.h  cubeMapAPI.h  customRenderObjectAPI.h  cvarAPI.h  ddAPI.h  declManagerAPI.h  editorAPI.h  entDefAPI.h  entityDeclAPI.h  fontAPI.h  gameAPI.h  guiAPI.h  iFaceBase.h  iFaceMgrAPI.h  imgAPI.h  inputSystemAPI.h  keyValueSetter.h  kfModelAPI.h  loadingScreenMgrAPI.h  materialSystemAPI.h  modelAPI.h  modelDeclAPI.h  modelLoaderDLLAPI.h  modelPostProcessFuncs.h  moduleManagerAPI.h  mtrAPI.h  mtrStageAPI.h  noise2DAPI.h  occlusionQueryAPI.h  particleDeclAPI.h  physAPI.h  physCharacterControllerAPI.h  physConstraintAPI.h  physObjectAPI.h  (+24 more)
code/cgame/: cg_api.cpp  cg_chat.cpp  cg_collision.cpp  cg_consoleCmds.cpp  cg_consolecmds.c  cg_draw.c  cg_draw.cpp  cg_drawtools.c  cg_drawtools.cpp  cg_emitter.cpp  cg_emitter.h  cg_emitter_base.h  cg_emitter_d3.cpp  cg_emitter_d3.h  cg_entities.cpp  cg_entities.h  cg_entity.cpp  cg_entity.h  cg_ents.c  cg_ents.cpp  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_main.cpp  cg_players.c  cg_playerstate.c  cg_playerstate.cpp  cg_predict.c  cg_predict.cpp  cg_public.h  cg_servercmds.c  cg_servercmds.cpp  cg_snapshot.c  cg_snapshot.cpp  cg_syscalls.c  cg_syscalls.cpp  cg_tempLights.cpp  cg_testEmitter.cpp  (+7 more)
code/client/: cl_avi.c  cl_avi.cpp  cl_cgame.c  cl_cgame.cpp  cl_cin.c  cl_cin.cpp  cl_console.cpp  cl_curl.cpp  cl_curl.h  cl_gui.cpp  cl_input.c  cl_input.cpp  cl_keys.c  cl_keys.cpp  cl_loadingScreenMgr.cpp  cl_main.c  cl_main.cpp  cl_net_chan.cpp  cl_parse.c  cl_parse.cpp  cl_renderer.cpp  cl_scrn.c  cl_scrn.cpp  cl_ui.c  cl_ui.cpp  client.h  keycodes.h  keys.h
code/cm/: cm_anims.cpp  cm_anims.h  cm_api.cpp  cm_cmds.cpp  cm_helper.cpp  cm_helper.h  cm_inlineBSPModel.cpp  cm_local.h  cm_model.cpp  cm_model.h  cm_modelLoaderWrapper.cpp  cm_model_impl.cpp  cm_phy.cpp  cm_proc.cpp  cm_world.cpp
code/common/: autocompletion.cpp  autocompletion.h  cmd.cpp  com_systemEventCaster.cpp  common.cpp  common.h  cvar.cpp  files.cpp  iFaceMgrIMPL.cpp  md4.cpp  md5.cpp  moduleManagerIMPL.cpp  msg.cpp  net_chan.cpp  net_ip.cpp  puff.h  unzip.c
code/declManager/: articulatedFigure.cpp  articulatedFigure.h  declManagerIMPL.cpp  declManagerIMPL.h  declRefState.h  particleDecl.cpp  particleDecl.h  q3PlayerModelDecl.cpp  q3PlayerModelDecl.h
code/editor/: BRUSH.H  Brush.cpp  CAMERA.H  CSG.CPP  CamWnd.cpp  CamWnd.h  ChildFrm.cpp  CommandsDlg.cpp  DRAG.CPP  ECLASS.CPP  ENTITY.CPP  ENTITY.H  Editor.rc  EntityListDlg.cpp  GroupBar.cpp  IShaders.cpp  LBMLIB.CPP  MAP.CPP  MAP.H  MATHLIB.CPP  MATHLIB.H  MRU.CPP  MainFrm.cpp  MainFrm.h  MapInfo.cpp  PARSE.CPP  PARSE.H  PMESH.CPP  POINTS.CPP  PatchDialog.cpp  PrefsDlg.cpp  QE3.CPP  QE3.H  QEDEFS.H  QERTYPES.H  QFILES.H  QGL.H  QGL_WIN.CPP  Radiant.cpp  Radiant.h  (+56 more)
code/fileformats/: 3ds_file_format.h  actorX_file_format.h  bspFileFormat.h  bspFileFormat_hl.h  bspFileFormat_hl2.h  bspFileFormat_q2.h  md2_file_format.h  md3_file_format.h  md5r_file_format.h  mdc_file_format.h  mdm_file_format.h  mds_file_format.h  mdx_file_format.h  skab_file_format.h  skc_file_format.h  skd_file_format.h  tan_file_format.h  vvdFileFormat.h
code/game/: bg_misc.c  bg_misc.cpp  bg_pmove.c  bg_public.h  bt_include.h  bt_vehicle.cpp  edict.h  explosionInfo.h  g_active.c  g_active.cpp  g_ammo.cpp  g_api.cpp  g_bot.cpp  g_bullet.cpp  g_bullet_debugDraw.cpp  g_classes.cpp  g_classes.h  g_client.c  g_client.cpp  g_cmds.c  g_collision.cpp  g_combat.c  g_configStrings.cpp  g_debugDraw.cpp  g_ents.cpp  g_local.h  g_main.c  g_main.cpp  g_pathNodes.cpp  g_pathNodes.h  g_physDLL.cpp  g_physVehicleAPI.h  g_playerModels.cpp  g_public.h  g_ragdoll.cpp  g_ragdoll.h  g_saveMapFile.cpp  g_scriptedClasses.cpp  g_scriptedClasses.h  g_spawn.c  (+16 more)
code/gui/: gui_api.cpp  urc.cpp  urc.h  urc_element_base.cpp  urc_element_base.h  urc_element_bindList.cpp  urc_element_bindList.h  urc_element_button.cpp  urc_element_button.h  urc_element_checkbox.cpp  urc_element_checkbox.h  urc_element_field.cpp  urc_element_field.h  urc_element_label.cpp  urc_element_label.h  urc_element_pulldown.cpp  urc_element_pulldown.h  urc_element_slider.cpp  urc_element_slider.h  urc_mgr.cpp  urc_mgr.h
code/imageLib/: img_api.cpp  img_convert.cpp  img_devil.cpp  img_local.h  img_main.cpp  img_utils.cpp  img_webp.cpp  img_write.cpp
code/materialSystem/: mat_api.cpp  mat_cubeMap.cpp  mat_cubeMap.h  mat_impl.cpp  mat_impl.h  mat_local.h  mat_main.cpp  mat_public.h  mat_rgbGen.cpp  mat_rgbGen.h  mat_stageTexture.cpp  mat_stageTexture.h  mat_texMods.cpp  mat_texMods.h  mat_textures.cpp  mat_texturesScript.cpp
docs/: Changelog  Notes
game/: qio.ilk  run_dedicated.bat  run_editor_mode.bat  run_test_hipshot_sky_violentdays-16kx16kworld.bat  run_test_hipshot_sky_violentdays-32kx32kworld.bat  run_test_hipshot_sky_violentdays-8192x8192world.bat  run_test_hipshot_sky_violentdays.bat  run_test_hipshot_sky_violentdays_min02.bat  run_test_hipshot_sky_violentdays_min06.bat  run_test_hipshot_sky_violentdays_minExp.bat  run_test_mapFileBezierPatches.bat  run_test_physbridge.bat  run_test_physics_shadowVolumes.bat  run_test_rgbaBumpHeightMap.bat  run_test_rotatingFan_shadowVolumes.bat  run_with_logfile.bat
patches/: 31-12-2013-clearup.patch  cubemapsupportforQIO.patch  directionalShadowMapping-part1-sun.patch  failed_attemp_to_fix_radiant_shared_gl_contexts.patch  failedviewmodelattempt.patch  materialsremapspart2.patch  occlusionQueriesTest.patch  q3map_areaportals_export_test1.patch  qio bullet multithreading physics with patches.patch  qioProcSupport.patch  radiant-rewirte-patch-end-claerups.patch  radiant-rewite-vec3part2.patch  radiant-rewrite-math-1.patch  radiant-rewrite-math-2.patch  radiant-rewrite-pmesh-and-clearup.patch  reailgunadded.patch  sunlight_and_depthshadowmapsfix.patch  ufinishedNewVFS.patch
(+2197 files in other folders)
